--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <footer class="fixed-bottom">
         <!-- Website -->
-         <a href="">
+         <a href="mailto:panopio.romel.mac@gmail.com" target="_blank">
             <i class="fa-solid fa-globe"></i>
          </a>
 
